			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * ENHANCED: parse_url(-, +) deos not include HTTP port if this is 80.

  * FIXED: Bug#27: incorrect failure of PL_get_pointer().  Paul
    Singleton.

===============================
VERSION 5.6.33 (April 06, 2007)
===============================

  * FIXED: Body decompilation with very large terms.  Mike Elston.

  * FIXED: PL_set_engine() to properly release the old engine.  With
    patch from Ramakrishna Venkatraman.

  * TEST: Some small issues that make it possible to mix the old and
    new test framework so we can use PlUnit for testing libraries and
    have it working from "make check".

  * FIXED: Error warnings on illegal 1st byte in UTF-8 sequences.
    Also fixed utf-8 decoding test suite.

  * ADDED: library(rbtrees), providing Red-Black trees.  Copied with
    permission from Yap.  Details of the library are still under
    discussion.


===============================
VERSION 5.6.32 (March 26, 2007)
===============================

  * ENHANCED: library(debug).  Warn if topic is not registered and include
    the issuing thread in the message if it is not the main thread.  Mike
    Elston.

  * ADDED: Windows: menu entries for debug monitor and exception monitor.
    Also added these to PceEmacs Prolog mode.

  * ENHANCED: Extend context in which PL_new_term_ref() can be called
    to include the cases required by JPL.

  * MODIFIED: Do not call prolog_exception_hook/4 if debugger is
    suspended (typically in calls from the debugger and IDE tools).

  * ADDED: rl_write_history/1 and rl_read_history/1.  Suggested by
    Samer Abdallah.

  * FIXED: Reduce cases that cause a long delay in halt with the
    message "<N> threads wouldn't die"

===============================