@@ -7,6 +7,9 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: possible scenario where atom garbage collection is no longer
+    automatically started, running out of memory.  Mike Elston.
+
   * ENHANCED: parse_url(-, +) deos not include HTTP port if this is 80.
 
   * FIXED: Bug#27: incorrect failure of PL_get_pointer().  Paul
